--- a/pages/tickets.html
+++ b/pages/tickets.html
@@ -13,20 +13,20 @@
     crossorigin="anonymous"></script>
   <script src="../assets/js/interaction.js" defer></script>
   <link rel="stylesheet" href="../assets/styles/estilos.css">
-  <link rel="shortcut icon" href="./assets/favicon.ico" />
+  <link rel="shortcut icon" href="../assets/favicon.ico" />
 </head>
 <header>
 <nav class="navbar bg-dark menu-desk" data-bs-theme="dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="./index.html">
+      <a class="navbar-brand" href="../index.html">
         <img src="./assets/images/codoacodo.png" alt="CaC Logo" class="img-header">
         Conf Bs As
       </a>
       <div class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
-        <a class="me-3 py-2 link-secondary" href="./index.html#conferencia">La conferencia</a>
-        <a class="me-3 py-2 link-secondary" href="./index.html#oradores">Los oradores</a>
-        <a class="me-3 py-2 link-secondary" href="./index.html#lugar">El lugar y la fecha</a>
-        <a class="me-3 py-2 link-secondary" href="./index.html#orador">Conviértete en orador</a>
+        <a class="me-3 py-2 link-secondary" href="../index.html#conferencia">La conferencia</a>
+        <a class="me-3 py-2 link-secondary" href="../index.html#oradores">Los oradores</a>
+        <a class="me-3 py-2 link-secondary" href="../index.html#lugar">El lugar y la fecha</a>
+        <a class="me-3 py-2 link-secondary" href="../index.html#orador">Conviértete en orador</a>
         <a class="me-3 py-2 link-success" href="./tickets.html">Comprar tickets</a>
       </div>
     </div>
@@ -37,7 +37,7 @@
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         <a>
-          <img src="./assets/images/codoacodo.png" alt="CaC Logo" class="img-header">
+          <img src="../assets/images/codoacodo.png" alt="CaC Logo" class="img-header">
           Conf Bs As
         </a>
       </button>
