--- a/pages/tickets.html
+++ b/pages/tickets.html
@@ -19,7 +19,7 @@
 <nav class="navbar bg-dark menu-desk" data-bs-theme="dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="../index.html">
-        <img src="./assets/images/codoacodo.png" alt="CaC Logo" class="img-header">
+        <img src="../assets/images/codoacodo.png" alt="CaC Logo" class="img-header">
         Conf Bs As
       </a>
       <div class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
