--- a/pages/tickets.html
+++ b/pages/tickets.html
@@ -46,11 +46,11 @@
   
   <div class="collapse" id="navbarToggleExternalContent" data-bs-theme="dark">
     <div class="bg-dark p-4">
-      <p class="me-3 py-2 link-secondary" href="../index.html#conferencia">La conferencia</p>
-      <p class="me-3 py-2 link-secondary" href="../index.html#oradores">Los oradores</p>
-      <p class="me-3 py-2 link-secondary" href="../index.html#lugar">El lugar y la fecha</p>
-      <p class="me-3 py-2 link-secondary" href="../index.html#orador">Conviértete en orador</p>
-      <p class="me-3 py-2 link-success" href="./tickets.html">Comprar tickets</p>
+      <p><a class="me-3 py-2 link-secondary" href="../index.html#conferencia">La conferencia</a></p>
+      <p><a class="me-3 py-2 link-secondary" href="../index.html#oradores">Los oradores</a></p>
+      <p><a class="me-3 py-2 link-secondary" href="../index.html#lugar">El lugar y la fecha</a></p>
+      <p><a class="me-3 py-2 link-secondary" href="../index.html#orador">Conviértete en orador</a></p>
+      <p><a class="me-3 py-2 link-success" href="./tickets.html">Comprar tickets</a></p>
     </div>
   </div>
 </header>
