--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="./assets/styles/estilos.css">
 </head>
 <header>
-  <nav class="navbar bg-dark" data-bs-theme="dark">
+  <nav class="navbar bg-dark" data-bs-theme="dark" aria-label>
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
         <img src="./assets/images/codoacodo.png" alt="CaC Logo" class="img-header">
@@ -153,7 +153,7 @@
 
 <footer>
   <nav class="navbar border-bottom border-body"
-    style="margin-top: 20px; height: 120px; width: 100%; background-color:rgb(29, 67, 88)">
+    style="margin-top: 20px; height: 120px; width: 100%; background-color:rgb(29, 67, 88)" aria-label="">
     <div class="container-fluid">
       <a class="me-3 py-2 link-light" href="#">Preguntas frecuentes</a>
       <a class="me-3 py-2 link-light" href="#">Contáctanos</a>
