Add styles, functions
En interaction.js agregan funciones de validación (validateMail-validateName)  y se agregan a los eventos y funciones correspondientes.
En estilos.css se agregan :hover de los botones
En tickets.html se agrega aria.label a elementos nav

--- a/pages/tickets.html
+++ b/pages/tickets.html
@@ -16,11 +16,7 @@
   <link rel="shortcut icon" href="../assets/favicon.ico" />
 </head>
 <header>
-<<<<<<< Updated upstream
-<nav class="navbar bg-dark menu-desk" data-bs-theme="dark">
-=======
-  <nav class="navbar bg-dark" data-bs-theme="dark" aria-label="">
->>>>>>> Stashed changes
+<nav class="navbar bg-dark menu-desk" data-bs-theme="dark" aria-label="">
     <div class="container-fluid">
       <a class="navbar-brand" href="../index.html">
         <img src="../assets/images/codoacodo.png" alt="CaC Logo" class="img-header">
@@ -36,7 +32,7 @@
     </div>
   </nav>
 
-  <nav class="navbar navbar-dark bg-dark menu-movil" data-bs-theme="dark">
+  <nav class="navbar navbar-dark bg-dark menu-movil" data-bs-theme="dark" aria-label="">
     <div class="container-fluid">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
