--- a/index.html
+++ b/index.html
@@ -136,13 +136,13 @@
           style="text-decoration-line:underline; text-decoration-style:dotted;">charla ignite</span>. Cuéntanos de qué
         quieres hablar!</p>
   </div>
-  <div style="margin-inline: 420px">
+  <div class="m-3">
     <div class="input-group mb-3">
       <input type="text" class="form-control" placeholder="Nombre" aria-label="Nombre">
       <span class="input-group-text"> </span>
       <input type="text" class="form-control" placeholder="Apellido" aria-label="Apellido">
     </div>
-    <div class="input-group">
+    <div class="input-group mb-3">
       <textarea class="form-control" placeholder="Sobre qué quieres hablar?"
         aria-label="Sobre qué quieres hablar?"></textarea>
     </div>
