--- a/pages/tickets.html
+++ b/pages/tickets.html
@@ -97,11 +97,11 @@
   </div>
 
   <div class="container-lg align-items-center">
-    <div class="row align-items-center" style="margin: 15px;">
+    <div class="row align-items-center m-3">
       <h6 class="text-center">VENTAS</h6>
       <h1 class="text-center">VALOR DEL TICKET $200</h1>
     </div>
-    <div class="row align-items-center" style="margin: 15px">
+    <div class="row align-items-center m-3">
       <div class="col-sm-12 col-lg-6">
         <input id="input-nombre" type="text" class="form-control" placeholder="Nombre" aria-label="Nombre" required>
       </div>
@@ -109,7 +109,7 @@
         <input id="input-apellido" type="text" class="form-control" placeholder="Apellido" aria-label="Apellido" required>
       </div>
     </div>
-    <div class="row align-items-center" style="margin: 15px">
+    <div class="row align-items-center m-3">
       <div class="col">
         <div class="input-group">
           <input id="input-correo" type="text" class="form-control" placeholder="Correo" aria-label="Correo" required>
@@ -117,7 +117,7 @@
       </div>
     </div>
 
-    <div class="row align-items-center" style="margin: 15px">
+    <div class="row align-items-center m-3">
       <div class="col-sm-12 col-lg-6">
         <label for="input-cantidad" class="form-label">Cantidad</label>
         <input id="input-cantidad" type="number" class="form-control" value="1" min="1" max="5" placeholder="Cantidad" aria-label="Cantidad"
@@ -133,13 +133,13 @@
       </div>
     </div>
 
-    <div class="row align-items-center" style="margin: 32px">
+    <div class="row align-items-center m-5">
       <div id="div-pagar" class="alert alert-info" role="alert">
         <h5 id="total">Total a Pagar: $</h5>
       </div>
     </div>
 
-    <div class="row align-items-center" style="margin: 15px">
+    <div class="row align-items-center m-3">
       <div class="col div-margin">
         <button id="btn-borrar" class="btn btn-verde">Borrar</button>
       </div>
