--- a/pages/tickets.html
+++ b/pages/tickets.html
@@ -126,6 +126,7 @@
       <div class="col-sm-12 col-lg-6">
         <label for="input-categoria" class="form-label">Categoria</label>
         <select id="input-categoria" class="form-select" aria-label="input-categoria">
+          <option value="sin categoria" selected>Sin categoria</option>
           <option value="80" selected>Estudiante</option>
           <option value="50">Trainee</option>
           <option value="15">Junior</option>
