--- a/pages/tickets.html
+++ b/pages/tickets.html
@@ -127,7 +127,7 @@
         <label for="input-categoria" class="form-label">Categoria</label>
         <select id="input-categoria" class="form-select" aria-label="input-categoria">
           <option value="sin categoria" selected>Sin categoria</option>
-          <option value="80" selected>Estudiante</option>
+          <option value="80" >Estudiante</option>
           <option value="50">Trainee</option>
           <option value="15">Junior</option>
         </select>
